@@ -91,6 +91,22 @@ name|exp
 operator|.
 name|parser
 operator|.
+name|ASTFalse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|exp
+operator|.
+name|parser
+operator|.
 name|SimpleNode
 import|;
 end_import
@@ -2096,6 +2112,63 @@ argument_list|(
 literal|"a = enum:org.apache.cayenne.exp.ExpEnum1.TWO"
 argument_list|,
 name|buffer
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testCustomPruneTransform
+parameter_list|()
+block|{
+name|Expression
+name|exp
+init|=
+name|ExpressionFactory
+operator|.
+name|exp
+argument_list|(
+literal|"(false and true) and true"
+argument_list|)
+decl_stmt|;
+name|Expression
+name|transformed
+init|=
+name|exp
+operator|.
+name|transform
+argument_list|(
+name|node
+lambda|->
+block|{
+if|if
+condition|(
+name|node
+operator|instanceof
+name|ASTFalse
+condition|)
+block|{
+return|return
+name|Expression
+operator|.
+name|PRUNED_NODE
+return|;
+block|}
+return|return
+name|node
+return|;
+block|}
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"true and true"
+argument_list|,
+name|transformed
 operator|.
 name|toString
 argument_list|()
